--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/clerk-react": "^5.22.6",
     "@clerk/nextjs": "^6.10.2",
     "@radix-ui/react-slot": "^1.1.1",
+    "@stream-io/video-react-sdk": "^1.10.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "convex": "^1.18.2",
@@ -18,6 +20,7 @@
     "next": "14.2.23",
     "react": "^18",
     "react-dom": "^18",
+    "svix": "^1.45.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7"
   },
