--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/clerk-react": "^5.22.6",
     "@clerk/nextjs": "^6.10.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.5",
     "@radix-ui/react-slot": "^1.1.1",
     "@stream-io/video-react-sdk": "^1.10.6",
     "class-variance-authority": "^0.7.1",
@@ -18,6 +19,7 @@
     "convex": "^1.18.2",
     "lucide-react": "^0.474.0",
     "next": "14.2.23",
+    "next-themes": "^0.4.4",
     "react": "^18",
     "react-dom": "^18",
     "svix": "^1.45.1",
